--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "history": "^4.10.1",
     "react": "^16.5.2",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.11",
     "react-router-dom": "^5.1.2"
