--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "server": "node app/server/index.js",
     "dev": "webpack-dev-server --config webpack/webpack.dev.js --open",
-    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run dev\" "
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run dev\" ",
+    "build": "webpack -p --config webpack/webpack.prod.js",
+    "test": "jest --coverage",
+    "test:watch": "npm test -- --watchAll --verbose"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +19,8 @@
     "express": "^4.17.1",
     "history": "^4.10.1",
     "react": "^16.5.2",
+    "react-dom": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
-    "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.11",
     "react-router-dom": "^5.1.2"
   },
@@ -31,11 +34,18 @@
     "@babel/runtime": "^7.8.4",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.2",
+    "chai": "^4.2.0",
+    "chart.js": "^2.9.3",
     "compression-webpack-plugin": "^3.1.0",
     "concurrently": "^5.1.0",
     "css-loader": "^1.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.3.0",
+    "jest-fetch-mock": "^3.0.3",
+    "jsdom": "^16.2.2",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^0.23.0",
@@ -43,5 +53,13 @@
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|scss)$": "<rootDir>/__mocks__/fileMock.js"
+    },
+    "setupFilesAfterEnv": [
+      "./setupTests.js"
+    ]
   }
 }
