--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.8.4",
+    "@testing-library/react-hooks": "^3.2.1",
+    "axios-mock-adapter": "^1.18.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.2",
     "chai": "^4.2.0",
