--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run dev\" ",
     "build": "webpack -p --config webpack/webpack.prod.js",
     "test": "jest --coverage",
-    "test:watch": "npm test -- --watchAll --verbose"
+    "test:watch": "npm test -- --watchAll --verbose",
+    "cypress": "cypress open"
   },
   "keywords": [],
   "author": "",
@@ -42,6 +43,7 @@
     "compression-webpack-plugin": "^3.1.0",
     "concurrently": "^5.1.0",
     "css-loader": "^1.0.0",
+    "cypress": "^4.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "file-loader": "^5.0.2",
