refatorando component APP

--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     },
     "setupFilesAfterEnv": [
       "./setupTests.js"
+    ],
+    "testPathIgnorePatterns" : [
+      "<rootDir>/cypress" 
     ]
   }
 }
